--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 84,
    "id": "fd2962f2",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "id": "1f81bb7c",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "id": "9d5675b7",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "id": "fff347ff",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "(30000, 25)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 88,
    "id": "618c21b5",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,8 +357,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "37a36c46",
+   "metadata": {},
+   "source": [
+    "## ID Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "id": "db85a1e1",
    "metadata": {},
    "outputs": [
@@ -408,78 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfbb8cfd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "EDUCATION\n",
-       "2    13884\n",
-       "1    10474\n",
-       "3     4867\n",
-       "0      329\n",
-       "5      275\n",
-       "4      122\n",
-       "6       49\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['EDUCATION'].value_counts()\n",
-    "\n",
-    "# There are 7 unique values in EDUCATION. Based on data dictionary, there must be only 4 unique values.\n",
-    "# 1. Graduate school\n",
-    "# 2. University\n",
-    "# 3. High school\n",
-    "# 4. Others\n",
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "a39dcedd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "EDUCATION\n",
-       "0    329\n",
-       "5    275\n",
-       "6     49\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[df['EDUCATION'].isin([0,5,6]),'EDUCATION'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61ba949d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Lets "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "bd4ae323",
+   "id": "d44023b8",
    "metadata": {},
    "outputs": [
     {
@@ -488,9 +425,8 @@
        "29687"
       ]
      },
-     "execution_count": 41,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -504,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "b0831161",
    "metadata": {},
    "outputs": [
@@ -583,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "9d74dcaa",
    "metadata": {},
    "outputs": [
@@ -943,6 +879,295 @@
     "# lets save the cleaned data for futher use\n",
     "\n",
     "df_clean_1.to_csv('Data/cleaned_credit_card_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "993a9072",
+   "metadata": {},
+   "source": [
+    "## Continue with rest of the features and responses analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "31ca1ace",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 29685 entries, 0 to 29684\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                      Non-Null Count  Dtype \n",
+      "---  ------                      --------------  ----- \n",
+      " 0   ID                          29685 non-null  object\n",
+      " 1   LIMIT_BAL                   29685 non-null  int64 \n",
+      " 2   SEX                         29685 non-null  int64 \n",
+      " 3   EDUCATION                   29685 non-null  int64 \n",
+      " 4   MARRIAGE                    29685 non-null  int64 \n",
+      " 5   AGE                         29685 non-null  int64 \n",
+      " 6   PAY_1                       29685 non-null  object\n",
+      " 7   PAY_2                       29685 non-null  int64 \n",
+      " 8   PAY_3                       29685 non-null  int64 \n",
+      " 9   PAY_4                       29685 non-null  int64 \n",
+      " 10  PAY_5                       29685 non-null  int64 \n",
+      " 11  PAY_6                       29685 non-null  int64 \n",
+      " 12  BILL_AMT1                   29685 non-null  int64 \n",
+      " 13  BILL_AMT2                   29685 non-null  int64 \n",
+      " 14  BILL_AMT3                   29685 non-null  int64 \n",
+      " 15  BILL_AMT4                   29685 non-null  int64 \n",
+      " 16  BILL_AMT5                   29685 non-null  int64 \n",
+      " 17  BILL_AMT6                   29685 non-null  int64 \n",
+      " 18  PAY_AMT1                    29685 non-null  int64 \n",
+      " 19  PAY_AMT2                    29685 non-null  int64 \n",
+      " 20  PAY_AMT3                    29685 non-null  int64 \n",
+      " 21  PAY_AMT4                    29685 non-null  int64 \n",
+      " 22  PAY_AMT5                    29685 non-null  int64 \n",
+      " 23  PAY_AMT6                    29685 non-null  int64 \n",
+      " 24  default payment next month  29685 non-null  int64 \n",
+      "dtypes: int64(23), object(2)\n",
+      "memory usage: 5.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lets load the cleaned data first before proceeding further wiht analysis\n",
+    "\n",
+    "df_clean_1 = pd.read_csv('Data/cleaned_credit_card_data.csv')\n",
+    "df_clean_1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "0e5b9802",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ID', 'LIMIT_BAL', 'SEX', 'EDUCATION', 'MARRIAGE', 'AGE', 'PAY_1',\n",
+       "       'PAY_2', 'PAY_3', 'PAY_4', 'PAY_5', 'PAY_6', 'BILL_AMT1', 'BILL_AMT2',\n",
+       "       'BILL_AMT3', 'BILL_AMT4', 'BILL_AMT5', 'BILL_AMT6', 'PAY_AMT1',\n",
+       "       'PAY_AMT2', 'PAY_AMT3', 'PAY_AMT4', 'PAY_AMT5', 'PAY_AMT6',\n",
+       "       'default payment next month'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean_1.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "61ba949d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PAY_1\n",
+       "-1                5047\n",
+       "-2                2476\n",
+       "0                13087\n",
+       "1                 3261\n",
+       "2                 2378\n",
+       "3                  292\n",
+       "4                   63\n",
+       "5                   23\n",
+       "6                   11\n",
+       "7                    9\n",
+       "8                   17\n",
+       "Not available     3021\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Lets look at PAY_1 column, since it is supposed to be a numeric column but shows up as an object\n",
+    "\n",
+    "df_clean_1['PAY_1'].value_counts().sort_index()\n",
+    "\n",
+    "# There are 2 problems here:\n",
+    "# 1. The is a \"Not available\" value which is not a number\n",
+    "# 2. There are some values which are not mentioned in the data dictionary like 0, and -2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "aa000caf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lets remove Not available value from the dataframe\n",
+    "\n",
+    "df_clean_2 = df_clean_1[df_clean_1['PAY_1'] != 'Not available'].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "6467bec9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 26664 entries, 0 to 29684\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                      Non-Null Count  Dtype \n",
+      "---  ------                      --------------  ----- \n",
+      " 0   ID                          26664 non-null  object\n",
+      " 1   LIMIT_BAL                   26664 non-null  int64 \n",
+      " 2   SEX                         26664 non-null  int64 \n",
+      " 3   EDUCATION                   26664 non-null  int64 \n",
+      " 4   MARRIAGE                    26664 non-null  int64 \n",
+      " 5   AGE                         26664 non-null  int64 \n",
+      " 6   PAY_1                       26664 non-null  int64 \n",
+      " 7   PAY_2                       26664 non-null  int64 \n",
+      " 8   PAY_3                       26664 non-null  int64 \n",
+      " 9   PAY_4                       26664 non-null  int64 \n",
+      " 10  PAY_5                       26664 non-null  int64 \n",
+      " 11  PAY_6                       26664 non-null  int64 \n",
+      " 12  BILL_AMT1                   26664 non-null  int64 \n",
+      " 13  BILL_AMT2                   26664 non-null  int64 \n",
+      " 14  BILL_AMT3                   26664 non-null  int64 \n",
+      " 15  BILL_AMT4                   26664 non-null  int64 \n",
+      " 16  BILL_AMT5                   26664 non-null  int64 \n",
+      " 17  BILL_AMT6                   26664 non-null  int64 \n",
+      " 18  PAY_AMT1                    26664 non-null  int64 \n",
+      " 19  PAY_AMT2                    26664 non-null  int64 \n",
+      " 20  PAY_AMT3                    26664 non-null  int64 \n",
+      " 21  PAY_AMT4                    26664 non-null  int64 \n",
+      " 22  PAY_AMT5                    26664 non-null  int64 \n",
+      " 23  PAY_AMT6                    26664 non-null  int64 \n",
+      " 24  default payment next month  26664 non-null  int64 \n",
+      "dtypes: int64(24), object(1)\n",
+      "memory usage: 5.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lets also convert PAY_1 to numeric type\n",
+    "\n",
+    "df_clean_2['PAY_1'] = pd.to_numeric(df_clean_2['PAY_1'])\n",
+    "\n",
+    "df_clean_2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "c14c78e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(26664, 25)"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean_2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2db036ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "891d96f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "dfbb8cfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EDUCATION\n",
+       "2    13884\n",
+       "1    10474\n",
+       "3     4867\n",
+       "0      329\n",
+       "5      275\n",
+       "4      122\n",
+       "6       49\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['EDUCATION'].value_counts()\n",
+    "\n",
+    "# There are 7 unique values in EDUCATION. Based on data dictionary, there must be only 4 unique values.\n",
+    "# 1. Graduate school\n",
+    "# 2. University\n",
+    "# 3. High school\n",
+    "# 4. Others\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "a39dcedd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EDUCATION\n",
+       "0    329\n",
+       "5    275\n",
+       "6     49\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df['EDUCATION'].isin([0,5,6]),'EDUCATION'].value_counts()"
    ]
   },
   {
