--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "id": "5ce990e2",
    "metadata": {},
    "outputs": [],
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "id": "2627dff0",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 86,
    "id": "0cc10266",
    "metadata": {},
    "outputs": [
@@ -1286,7 +1286,7 @@
        "max    800000.000000     79.000000"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "id": "2d93a80a",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1315,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "id": "cf2095cc",
    "metadata": {},
    "outputs": [],
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 89,
    "id": "80c38385",
    "metadata": {},
    "outputs": [
@@ -1353,7 +1353,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 90,
    "id": "4f3ebf04",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1379,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 91,
    "id": "785147ba",
    "metadata": {},
    "outputs": [],
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 92,
    "id": "6c02def8",
    "metadata": {},
    "outputs": [
@@ -1414,7 +1414,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,8 +1425,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "a06b5237",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean_2.to_csv(\"Data/df_clean_2.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e28b7e06",
    "metadata": {},
    "outputs": [],
    "source": []
